Have a single DefaultMethodHandle for java 8 and 11 that don't print warnings